fixed EndTurnInteractorTest.java and ContestInteractorTest